--- a/webpack5Guide/package.json
+++ b/webpack5Guide/package.json
@@ -6,8 +6,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --mode development --env development",
-    "build": "webpack",
+    "start": "webpack serve --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
     "server": "node server.js",
     "watch": "webpack --watch",
     "testEnv": "webpack --env.NODE_ENV=local --env.production --progress"
@@ -22,7 +22,8 @@
     "webpack": "^5.0.0",
     "webpack-cli": "^4.0.0",
     "webpack-dev-middleware": "^3.7.2",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.2.0"
   },
   "dependencies": {
     "lodash": "^4.17.20"
